--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/floating-labels.css": "/css/floating-labels.css",
     "/css/admin_custom.css": "/css/admin_custom.css",
     "/css/app.css": "/css/app.css"
 }
