--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^9.0",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
